@@ -1,3 +1,13 @@
+2008-11-20  Emmanuele Bassi  <ebassi@linux.intel.com>
+
+	* clutter/clutter-actor.c:
+	(clutter_actor_set_property): Add sanity checks for NULL
+	boxed values when setting the rotation center.
+
+	* tests/interactive/test-animation.c:
+	(on_button_press): Add an example on how to use the rotation
+	properties to animate an actor.
+
 2008-11-18  Neil Roberts  <neil@linux.intel.com>
 
 	Fixed some trivial compiler warnings
